dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-prometheus-service
  namespace: node-prometheus
  labels:
    app: node-prometheus
spec:
  selector:
    app: node-prometheus
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http8080
  type: ClusterIP
